# qas_intrusion_detection

./: MIT-LICENSE.txt  README.md  client.py  pyproject.toml  server.py
data_collection/: 01-normal.tab  02-attack.tab  03-normal.tab  04-attack.tab  05-attack.tab  labeled_dataset.tab
ml_training/: classifiers.py
qas_experimental_evaluation_project/: dos.py  experiment_client.py  experiment_server.py  malware_client.py  malware_server.py  monitoring.py  ransomware.py  server.py  utils.py
tests/: test_qas_experimental_evaluation_project.py
