[tool.poetry]
name = "qas_experimental_evaluation_project"
version = "0.1.0"
description = "Anomaly-Based Error / Intrusion Detection - MO851A_2021_S2 - QAS Experimental Evaluation Project"
authors = ["André Portela <portela.eng@gmail.com>"]

[tool.poetry.scripts]
server = 'qas_experimental_evaluation_project.server:start'
client = 'qas_experimental_evaluation_project.client:start'
ransomware = 'qas_experimental_evaluation_project.ransomware:start'
malware_server = 'qas_experimental_evaluation_project.malware_server:start'
malware_client = 'qas_experimental_evaluation_project.malware_client:start'
monitoring = 'qas_experimental_evaluation_project.monitoring:start'
dos = 'qas_experimental_evaluation_project.dos:start'

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.70.0"
uvicorn = {extras = ["standard"], version = "0.16.0"}
aiofiles = "0.8.0"
requests = "2.26.0"
Faker = "10.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
